tweaked nav bar and fixed minor layout issues on homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ header nav ul {
   justify-content: space-between;
   align-items: center;
   list-style: none;
+  padding-top: 15px;
 }
 
 header nav ul li a {
@@ -62,30 +63,34 @@ img:hover {
 /* Add hero here */
 
 .homeimage {
-    display: block;
-    text-align: center;
-    display: flex;
-    background-color: cornsilk;
-    justify-content: space-between;
-
+  display: block;
+  text-align: center;
+  display: flex;
+  background-color: cornsilk;
+  justify-content: space-between;
+  padding-top: 10px;
 }
 
 .hero h2 {
   text-align: center;
   color: white;
   font-weight: 500;
-  font-family: serif;
+  font-family: "helvetica neue";
   flex-wrap: wrap;
   /* width: 36%;
   margin-left: 34%; */
   font-size: 20px;
   font-weight: bolder;
+  margin: 0 auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: auto;
 }
 
 .hero h3 {
   text-align: center;
   color: white;
-  font-family: serif;
+  font-family: "helvetica neue";
   flex-wrap: wrap;
   /* width: 36%;
   margin-left: 34%; */
